--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "https://github.com/yeager20001118/yeager20001118.git
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "facial_photo.png"
+  avatar           : "life_photo.png"
   name             : "Xunye Tian (Yeager)"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. Candidate \n The University of Melbourne"
